--- a/myproject/accounts/templates/index.html
+++ b/myproject/accounts/templates/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    {% load static %}
 </head>
 <body class="bg-gray-100">
     <div class="relative w-full min-h-screen flex flex-col">
         <!-- Top Logo Section -->
         <div class="w-full bg-white py-4 flex justify-center shadow-md">
-            <img src="image/logo.jpg" alt="Gentle Hands Logo" class="h-12 md:h-16">
+            <img src="{% static 'logo.jpg' %}" alt="Gentle Hands Logo" class="h-12 md:h-16">
         </div>
         
         <!-- Background Image Section -->
-        <div class="relative flex-1 flex items-center justify-center bg-cover bg-center" style="background-image: url('image/image.jpg');">
+        <div class="relative flex-1 flex items-center justify-center bg-cover bg-center" style="background-image: url('{% static 'image.jpg' %}');">
             <div class="absolute inset-0 bg-black bg-opacity-30"></div>
             
             <!-- Content -->
