--- a/myproject/accounts/templates/registerChild.html
+++ b/myproject/accounts/templates/registerChild.html
@@ -9,7 +9,8 @@
 <body class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-6">
         <h2 class="text-2xl font-bold text-center mb-4">Register</h2>
-        <form action="#" method="POST">
+        <form method="post" class="space-y-4">
+            {% csrf_token %}
             <div class="mb-2">
                 <label class="block text-gray-600">First Name</label>
                 <input type="text" name="first_name" class="w-full border p-2 rounded-md focus:ring-2 focus:ring-pink-400">
@@ -72,10 +73,6 @@
             </div>
 
             <button type="submit" class="w-full bg-pink-500 text-white p-2 rounded-md hover:bg-pink-600">Register</button>
-
-            <p class="text-center text-gray-600 mt-3">Already have an account? 
-                <a href="login.html" class="text-pink-500 font-bold">Sign In</a>
-            </p>
         </form>
     </div>
 </body>
