Remove unused images and HTML files, update dashboard view and URLs for improved navigation

--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -143,7 +143,7 @@
 
         // Register New Child - Open Form
         document.getElementById("registerBtn").addEventListener("click", function () {
-            alert("Registration form can be implemented here.");
+            window.location.href = "{% url 'registerchild' %}";
         });
     </script>
 
