--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
 
     <div class="relative w-full min-h-screen flex flex-col">
-        <div class="bg-white py-4 flex items-center justify-between px-6 shadow-md">
+        <div class="bg-white py-4 flex items-center px-6 shadow-md">
             <button id="menu-toggle" class="text-black text-3xl focus:outline-none">&#9776;</button>
             <div class="flex-grow flex justify-center">
                 <img src="{% static 'logo.jpg' %}" alt="Gentle Hands Logo" class="h-12 md:h-16">
@@ -29,7 +29,7 @@
                 <a href="{% url 'childrecord' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>🏠</span> <span>Dashboard</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
+                <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Medication</span>
                 </a>
                 <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
