--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -32,17 +32,14 @@
                 <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Medication</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>📄</span> <span>Illness</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>🔔</span> <span>Appointment</span>
                 </a>
                 <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>✍</span> <span>Immunization</span>
-                </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>⚙</span> <span>Settings</span>
                 </a>
                 <form method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
