Add immunization feature with view and template, update dashboard links

--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -38,7 +38,7 @@
                 <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>🔔</span> <span>Appointment</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>✍</span> <span>Immunization</span>
                 </a>
                 <form method="post" action="{% url 'logout' %}">
