--- a/myproject/accounts/templates/medication.html
+++ b/myproject/accounts/templates/medication.html
@@ -32,18 +32,21 @@
                 <a href="child_profile.html" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Growth Data</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>✍</span> <span>Immunization</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>🔔</span> <span>Appointments</span>
+                <a href="{% url 'appointment_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>🔔</span> <span>Appointment</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>📄</span> <span>Illness</span>
                 </a>
-                <a href="#" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
-                    <span>🚪</span> <span>Log Out</span>
-                </a>
+                <form method="post" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <button type="submit" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                        <span>🚪</span> <span>Log Out</span>
+                    </button>
+                </form>
             </nav>
         </div>
         </div>
