--- a/myproject/accounts/templates/medication.html
+++ b/myproject/accounts/templates/medication.html
@@ -26,10 +26,10 @@
                 <img src="{% static 'logo.jpg' %}" alt="Gentle Hands Logo" class="h-16">
             </div>
             <nav class="flex flex-col space-y-4 px-6">
-                <a href="" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'medic' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>🏠</span> <span>Medical</span>
                 </a>
-                <a href="child_profile.html" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Growth Data</span>
                 </a>
                 <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
