Add growth data template and enhance medication and dashboard templates with improved icons and layout

--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -30,7 +30,7 @@
                     <span>🏠</span> <span>Dashboard</span>
                 </a>
                 <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
-                    <span>⭐</span> <span>Medication</span>
+                    <span>💊</span> <span>Medication</span>
                 </a>
                 <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>📄</span> <span>Illness</span>
