Add growth data view and update medication template for improved navigation

--- a/myproject/accounts/templates/medication.html
+++ b/myproject/accounts/templates/medication.html
@@ -36,7 +36,7 @@
                 <a href="{% url 'medic' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>💊</span> <span>Medical</span>
                 </a>
-                <a href="" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'growth_data' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⭐</span> <span>Growth Data</span>
                 </a>
                 <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
