Add user change functionality with new template and update navigation links

--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -41,7 +41,7 @@
                 <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>✍</span> <span>Immunizations List</span>
                 </a>
-                <a href="{% url 'register' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'changeuser' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⚙️</span> <span>User Settings</span>
                 </a>
                 <form method="post" action="{% url 'logout' %}">
