--- a/myproject/accounts/templates/registerChild.html
+++ b/myproject/accounts/templates/registerChild.html
@@ -70,8 +70,8 @@
             </div>
 
             <button class="w-full bg-pink-500 text-white px-4 py-3 rounded-lg hover:bg-pink-600 text-xl font-bold">Register</button>
+            <a href="{% url 'childrecord' %}" class="w-full bg-pink-500 text-white px-4 py-3 rounded-lg hover:bg-pink-600 text-xl font-bold text-center block">Back</a>
         </form>
     </div>
-
 </body>
 </html>
