--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="mt-6">
-            <button onclick="window.history.back()" 
+            <button onclick="window.location.href='{% url 'dashboard' %}'" 
                 class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600">
                 Back
             </button>  
