Add medication list view and update navigation links for improved access

--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -29,7 +29,7 @@
                 <a href="{% url 'childrecord' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>🏠</span> <span>Child Records</span>
                 </a>
-                <a href="{% url 'medication' %}" class="flex items-center space-x-2 text-black-500 font-medium hover:text-pink-500">
+                <a href="{% url 'medication_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>💊</span> <span>Medication List</span>
                 </a>
                 <a href="{% url 'illness_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
